k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evoeventmem
  labels:
    app.kubernetes.io/name: evoeventmem
